--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@dfinity/agent": "^2.3.0",
     "@dfinity/candid": "^2.3.0",
+    "@dfinity/identity": "^2.3.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "ipfs-http-client": "^60.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
