--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "generate": "dfx generate && ./convert-to-commonjs.sh"
+    "generate": "dfx generate && ./convert-to-commonjs.sh",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,8 @@
     "@dfinity/identity": "^2.3.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "buffer": "^6.0.3",
+    "cloudinary": "^2.6.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -24,6 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
+    "nodemon": "^3.1.9",
+    "pinata": "^2.0.1",
     "uuid": "^11.0.5"
   }
 }
